change image,text,css and div

--- a/css/animate.css
+++ b/css/animate.css
@@ -1015,30 +1015,32 @@ Copyright (c) 2013 Daniel Eden
 @-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+    -webkit-transform: translateY(-220px);
+    transform: translateY(-220px);
   }
 
   100% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    color:#0FF;
+    -webkit-transform: translateY(-200px);
+    transform: translateY(-200px);
   }
 }
 
 @keyframes fadeInDown {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    transform: translateY(-20px);
+    -webkit-transform: translateY(-220px);
+    -ms-transform: translateY(-220px);
+    transform: translateY(-220px);
   }
 
   100% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
+    color:#0FF;
+    -webkit-transform: translateY(-200px);
+    -ms-transform: translateY(-200px);
+    transform: translateY(-200px);
   }
 }
 
