--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -168,13 +168,19 @@
 /* Animations for content elements */
 
 .sl-trans-elems .caption-content h2 {
-	-webkit-animation: moveUp 1s ease-in-out both;
-	-moz-animation: moveUp 1s ease-in-out both;
-	-o-animation: moveUp 1s ease-in-out both;
-	-ms-animation: moveUp 1s ease-in-out both;
-	animation: moveUp 1s ease-in-out both;
+	-webkit-animation: fadeInDown 1s ease-in-out both;
+	-moz-animation: fadeInDown 1s ease-in-out both;
+	-o-animation: fadeInDown 1s ease-in-out both;
+	-ms-animation: fadeInDown 1s ease-in-out both;
+	animation: fadeInDown 1s ease-in-out both;
 }
-.sl-trans-elems .caption-content span,
+.sl-trans-elems .caption-content span{
+	-webkit-animation: fadeInDown 1s ease-in-out both;
+	-moz-animation: fadeInDown 1s ease-in-out both;
+	-o-animation: fadeInDown 1s ease-in-out both;
+	-ms-animation: fadeInDown 1s ease-in-out both;
+	animation: fadeInDown 1s ease-in-out both;
+}
 .sl-trans-elems .caption-content a {
 	-webkit-animation: fadeIn 0.5s linear 0.5s both;
 	-moz-animation: fadeIn 0.5s linear 0.5s both;
